--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.js"></script>
     <title>Tv Shows Searching app</title>
   </head>
   <body>
@@ -10,8 +11,8 @@
     <form id="form">
       <input
         type="text"
-        name="user-input"
-        id="user-input"
+        name="input"
+        id="input"
         placeholder="searching for .."
       />
       <button type="submit" id="search">Search</button>
