--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.js"></script>
+    <link rel="stylesheet" href="/style.css">
     <title>Tv Shows Searching app</title>
   </head>
   <body>
@@ -17,6 +18,7 @@
       />
       <button type="submit" id="search">Search</button>
     </form>
+    <div class="container"></div>
     <script src="/app.js"></script>
   </body>
 </html>
